[tool.poetry]
name = "github-issue-tracker"
version = "0.1.0"
description = ""
authors = ["Mike Gray <mike@graywind.org>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
tabulate = "^0.9.0"
ruff = "^0.1.13"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
mypy = "^1.8.0"
bandit = "^1.7.6"
pydocstyle = "^6.3.0"
pycodestyle = "^2.11.1"
pylint = "^3.0.3"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
